<?xml version="1.0"?>
<package format="2">
  <name>voxblox_ros</name>
  <version>0.0.0</version>
  <description>Voxblox ROS interface</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>interactive_markers</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_rviz_plugin</depend>
  <depend>bluerov_visualizer</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>waterlinked_a50_ros_driver</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>waterlinked_a50_ros_driver</build_export_depend>
  <build_export_depend>stereo_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>waterlinked_a50_ros_driver</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_ros</exec_depend> 
</package>
